--- a/ai-dotnet-workshop/ai-dotnet-workshop.csproj
+++ b/ai-dotnet-workshop/ai-dotnet-workshop.csproj
@@ -8,4 +8,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Azure.AI.OpenAI" Version="2.1.0" />
+    <PackageReference Include="Azure.Search.Documents" Version="11.6.0" />
+  </ItemGroup>
+
 </Project>
