--- a/semantic-kernel/semantic-kernel.csproj
+++ b/semantic-kernel/semantic-kernel.csproj
@@ -16,4 +16,10 @@
     <PackageReference Include="Spectre.Console" Version="0.50.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update=".env">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
